Add atlas generator

--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,6 @@ buildscript {
         google()
     }
     dependencies {
-        
-
     }
 }
 
@@ -45,6 +43,7 @@ project(":core") {
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         implementation("com.google.guava:guava:29.0-jre")
+        implementation 'com.google.code.gson:gson:2.8.6'
     }
 }
 
